--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -4,7 +4,7 @@ block content
   .container
     .page-header
       h1 Login
-
+    include /info
     .row
       .col-xs-12
         form(method="POST", action="/login?redir="+redir)
