--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -4,6 +4,7 @@ block content
   .container
     .page-header
       h1.center-xs #[b= user.gradeName+" "+user.rankName] #[br.visible-xs] #{user.fullName} of #{user.advisement}
+        small.right #{user.points} points
     if user.verified == false
       .alert.alert-danger(role="alert") This user is not verified to truly be #{user.firstName}! Therefore this account is restricted in what services it can use.
     .user-profile
