--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -3,17 +3,19 @@ extends /layout
 block content
   .container
     .page-header
-      h1.center-xs #[b= user.gradeName+" "+user.rankName] #[br.visible-xs] #{user.fullName} of #{user.advisement}
+      h1.center-xs #[b= user.gradeName+" "+user.rankName] #[br.visible-xs] #{user.fullName}
         small.right.hidden-xs.hidden-sm #{user.points} points
     if user.verified == false
       .alert.alert-danger(role="alert") This user is not verified to truly be #{user.firstName}! Therefore this account is restricted in what services it can use.
     .user-profile
       .row
         .col-xs-12.col-sm-6.col-md-4.center-xs
-          img#profile-pic(src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
+          .holder
+            img#profile-pic(src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
+            a.profile-user-adv(href="/advisements/"+user.advisement)= user.advisement
           br
           blockquote
-            a.profile-user-adv(href="/advisements/"+user.advisement)= user.advisement
+
             if user.bio
               p= user.bio
             else
