Getting ready for the big scrape

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -51,8 +51,8 @@ html
               if loggedIn
                 li(class=(helpers.isPage(page, "teachers")))
                   a(href="/teachers") Teachers
-                li(class=(helpers.isPage(page, "classes")))
-                  a(href="/classes") Classes
+                li(class=(helpers.isPage(page, "courses")))
+                  a(href="/courses") Courses
                 li(class=(title=="Forum" ? "active" : ""))
                   a(href="/forum") Forum
                 //
