--- a/views/teachers/list.jade
+++ b/views/teachers/list.jade
@@ -5,7 +5,25 @@ block content
     .page-header
       h1 Teachers
         small.right= teachers.length
-
+      
+    .teacher-list
+      .alert.alert-info.alert-dismissible(data-dismiss="alert", aria-label="Close", role="alert")
+        | You must be logged into Moodle to view the profile images.
+        button.close(data-dismiss="alert")
+      table.table.table-hover
+        tr
+          th Profile Picture
+          th Full Name
+          th Department
+        for t in teachers
+          tr
+            td
+              img(src=t.image)
+            td
+              h3= t.firstName + " " + t.lastName
+            td
+              h4= t.department
+          
 
     .row
       .col-xs-12
