--- a/views/teachers/profile.jade
+++ b/views/teachers/profile.jade
@@ -7,7 +7,7 @@ block content
         h1= title
       .row
         .col-xs-12
-          img.teacher-profile-img(src="https://webeim.regis.org/photos/regis/Staff/"+teacher.tID+".jpg")
+          img.teacher-profile-img(src=teacher.image)
     else
       .page-header
         h1 That teacher does not exist!
