--- a/views/courses/list.jade
+++ b/views/courses/list.jade
@@ -5,7 +5,7 @@ block content
     .page-header
       h1 Courses
         small.right #{courses.length} found
-
+      include /info
 
     .row
       .col-xs-12
