--- a/views/advisement/one.jade
+++ b/views/advisement/one.jade
@@ -4,8 +4,11 @@ block content
   .container
     .page-header
       h1 Advisement #{advisement.title}
-      h3 #[b= advisement.title] has #[b= registered.length] registered #{helpers.pluralize(registered.length, "user", "users")} and is advised by #[b NAME].
+        small.right= (registered.length/advisement.students.length)*10+"% registered"
+      h3 #[b= advisement.title] has #[b= registered.length] #{helpers.pluralize(registered.length, "user", "users")} registered out of #[b= advisement.students.length] and is advised by #[b= advisement.teacher.fullName].
     .col-xs-12
+      .col-xs-12.col-md-6
+        img(src=advisement.teacher.image)
       .row
         for user in registered
           .col-xs-12.col-sm-6.col-md-6.text-center
