Stabilized global chat and much more

--- a/views/chatbox.jade
+++ b/views/chatbox.jade
@@ -1,4 +1,4 @@
-.panel.panel-default.resizable#chat-box(style="overflow: auto").hidden-xs
+.panel.panel-default.resizable#chat-box(style="overflow: auto", data-username=currentUser.username).hidden-xs
   .panel-heading
     h3.panel-title Chat
       small.right#users-online 0 users online
