--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -81,16 +81,23 @@ main {
 
 .message .padded {
   padding-top: 2px;
-  padding-left: 60px;
-}
-
-.message span, b, img{
-  float: left;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .message img {
   width: 50px;
 }
+
+.othermessage img, .othermessage b, .othermessage div{
+  float: right;
+}
+
+.mymessage img, .mymessage b, .mymessage div{
+  float: left;
+}
+
+
 
 #chat-controls {
   position: fixed;
