More cleaning up
- Edited views to handle missing item errors
- Moved the scraper and populator programs and their scripts in package.json
- Improved README

--- a/views/courses/one.jade
+++ b/views/courses/one.jade
@@ -3,7 +3,7 @@ extends /layout
 block content
   .container
     .page-header
-      if course == 0
+      if course == false
         h1 No Such Course Exists
       else
         h1.left Course #{course.title}
