--- a/views/advisement/list.jade
+++ b/views/advisement/list.jade
@@ -6,29 +6,32 @@ block content
       h1 Advisements
         if loggedIn == false
           small.right Login for more info.
-
-    for ad in advisements
-      .col-xs-12.col-sm-6.col-md-4
-        .panel(class=(loggedIn == true && currentUser.advisement == ad.title ? "panel-primary" : "panel-default"))
-          .panel-heading
-            b #[a.undecorated(href="/advisements/"+ad.title)= ad.title]
-            if ad.teacher
-              a.undecorated.right(href="/teachers/"+ad.teacher.mID)= "Advisor "+ad.teacher.fullName
-            else
-              span.right No Advisor Found
-          .panel-body
-            if loggedIn
-              
-              -var found = false
-              for s in ad.students
-                if s.registered
-                  a(href="/users/"+s.username)
-                    if s.username == currentUser.username
-                      b= s.fullName
-                    else
-                      span= s.fullName
-                  -found = true
-              if found == false
-                span No students in #[b= ad.title] have registered yet!
-            else
-              span Log in to see what users in #[b= ad.title] have registered.
+    
+    if advisements == false
+      h3 No advisements found!
+    else
+      for ad in advisements
+        .col-xs-12.col-sm-6.col-md-4
+          .panel(class=(loggedIn == true && currentUser.advisement == ad.title ? "panel-primary" : "panel-default"))
+            .panel-heading
+              b #[a.undecorated(href="/advisements/"+ad.title)= ad.title]
+              if ad.teacher
+                a.undecorated.right(href="/teachers/"+ad.teacher.mID)= "Advisor "+ad.teacher.fullName
+              else
+                span.right No Advisor Found
+            .panel-body
+              if loggedIn
+                
+                -var found = false
+                for s in ad.students
+                  if s.registered
+                    a(href="/users/"+s.username)
+                      if s.username == currentUser.username
+                        b= s.fullName
+                      else
+                        span= s.fullName
+                    -found = true
+                if found == false
+                  span No students in #[b= ad.title] have registered yet!
+              else
+                span Log in to see what users in #[b= ad.title] have registered.
