--- a/views/advisement/one.jade
+++ b/views/advisement/one.jade
@@ -2,26 +2,31 @@ extends /layout
 
 block content
   .container
-    .page-header
-      h1 Advisement #{advisement.title}
-        small.right= (registered.length/advisement.students.length)*10+"% registered"
-      h3 #[b= advisement.title] has #[b= registered.length] #{helpers.pluralize(registered.length, "user", "users")} registered out of #[b= advisement.students.length] and is advised by #[b= advisement.teacher.fullName].
-    .col-xs-12
-      .col-xs-12.col-md-6
-        img(src=advisement.teacher.image)
-      .row
-        for user in registered
-          .col-xs-12.col-sm-6.col-md-6.text-center
-            .advisement-user-box
-              img(alt=user.bio, src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
-              .btn-group.full-width
-                button.full-width.btn.btn-default.dropdown-toggle(data-toggle="dropdown", ara-expanded="false", type="button")= user.fullName+" "
-                  span.caret
-                ul.dropdown-menu(role="menu")
-                  li
-                    if loggedIn
-                      a(href="/users/"+user.username) View Profile
-                      a(href="/users/"+user.username+"/schedule") View Schedule
-                    a(href="mailto:"+user.email) Email
-      .row
-        hr
+      if advisement == false
+        .page-header
+          h1 No such adivsement exists!
+      else
+        .page-header
+          h1 Advisement #{advisement.title}
+            small.right= (registered.length/advisement.students.length)*10+"% registered"
+          h3 #[b= advisement.title] has #[b= registered.length] #{helpers.pluralize(registered.length, "user", "users")} registered out of #[b= advisement.students.length] and is advised by #[b= advisement.teacher.fullName].
+        .col-xs-12
+          .col-xs-12.col-sm-6.col-md-6
+            img(src=advisement.teacher.image)
+          .row
+            for user in registered
+              .col-xs-12.col-sm-6.text-center
+                .advisement-user-box
+                  img(alt=user.bio, src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
+                  .btn-group.full-width
+                    button.full-width.btn.btn-default.dropdown-toggle(data-toggle="dropdown", ara-expanded="false", type="button")= user.fullName+" "
+                      span.caret
+                    ul.dropdown-menu(role="menu")
+                      li
+                        if loggedIn
+                          a(href="/users/"+user.username) View Profile
+                          a(href="/users/"+user.username+"/schedule") View Schedule
+                        a(href="mailto:"+user.email) Email
+          .row
+            hr
+      a.btn.btn-primary(href="/advisements") All Advisements
