--- a/views/chatpage.jade
+++ b/views/chatpage.jade
@@ -1,16 +1,9 @@
 extends /layout
 
 block content
-  .container
-    .page-header
-      h1 Regis Chat
-        small.right 1 user online
-    .col-xs-12.col-md-8
-      #chat-box(style="overflow: auto; position: initial; width: 100%;")
-        #chat-messages
-          
-      form#chat-controls.form-inline(role="form", style="position: initial")
-        input.form-control#chat-message(type="text", name="message", style="width: 80%;")
-        button#send-message.btn.btn-primary Send(type="button", style="width: 20%;")
-    .col-xs-12.col-md-4
-      h1 Users
+  #chat-box(style="overflow: auto; position: initial; width: 100%;")
+    #chat-messages
+      
+  form#chat-controls.form-inline(role="form", style="position: fixed; left: 0; bottom: 50px;")
+    input.form-control#chat-message(type="text", name="message", style="width: 80%;")
+    button#send-message.btn.btn-primary(type="button", style="width: 20%;") Send
