--- a/views/index.jade
+++ b/views/index.jade
@@ -19,3 +19,7 @@ block content
         .progress
           .progress-bar.progress-bar-striped.active(role="progressbar", aria-valuenow="10", aria-valuemin="0", aria-valuemax="100", style="width: 10%")
             span.sr-only 10% ready
+    
+    .row
+      .col-xs-12
+        a.btn.btn-primary(target="_blank", href="https://bitbucket.org/apexal/adiutor") Source Code
