--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -197,3 +197,9 @@ main {
 .teacher-profile-img {
   max-width: 200px;
 }
+
+/* Advisement Pages */
+.advisement-user-box button {
+  padding-left: 0;
+  padding-right: 0;
+}
