Improved home page view

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,5 +21,10 @@ block content
             span.sr-only 10% ready
     
     .row
-      .col-xs-12
+      .col-xs-12.text-center
         a.btn.btn-primary(target="_blank", href="https://bitbucket.org/apexal/adiutor") Source Code
+        a.btn.btn-default(target="_blank", href="http://www.regis.org/") Regis Site
+        a.btn.btn-default(target="_blank", href="http://intranet.regis.org/") Intranet
+        a.btn.btn-default(target="_blank", href="http://moodle.regis.org/my/") Moodle
+        a.btn.btn-default(target="_blank", href="https://owa.regis.org/") OWA
+        a.btn.btn-default(target="_blank", href="https://myfiles.regis.org/") MyFiles
