--- a/views/layout.jade
+++ b/views/layout.jade
@@ -104,8 +104,9 @@ html
                 li
                   a(href='#') Schedule &nbsp;
                     span.badge 2
-
-              img.right.navbar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg", data-username=currentUser.username)
+                    
+              a(href="/users/"+currentUser.username, title="Looking good.")
+                img.right.navbar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg", data-username=currentUser.username)
 
           #mobile-bottom-bar.visible-xs
             span
@@ -116,7 +117,8 @@ html
               a.fa.fa-pencil-square-o(href="/noter")
             span
               a.fa.fa-calendar(href="/scheduler")
-            img.right.navbar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg", data-username=currentUser.username)
+            a(href="/users/"+currentUser.username)
+              img.right.navbar-pic(src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg", data-username=currentUser.username)
     
     script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js")
     
