Made days view look amazing

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -203,6 +203,12 @@ main {
   padding-right: 0;
 }
 
+/* Day Pages */
+
+.right-spacer {
+  padding-right: 30px;
+}
+
 /* Homework Pages */
 
 .top-progress {
