Big bug fix that totally broke populate.js
- Implemented deep population
- Improved user profile view
- Improved teacher and course views

--- a/views/days/one.jade
+++ b/views/days/one.jade
@@ -40,7 +40,8 @@ block content
     .col-xs-12.col-sm-6.col-md-4
       .panel(class="panel-"+ptype)
         .panel-heading
-          h1.panel-title= title
+          h1.panel-title
+            a(href="/days/"+dateString+"/"+title)= title
         table.table
           for i in items
             tr
